--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap.min.css" crossorigin="anonymous">
 
-	<title>Tester for Logger </title>
+	<title>Fast Logger </title>
 </head>
 <body style="background-color: #f5f5f5; font-size: .85em;">
 	<div class="container-fluid">
